--- a/i18n/text.properties
+++ b/i18n/text.properties
@@ -1,51 +1,260 @@
 #
-#Tue Jul 09 13:23:27 CEST 2019
+#Thu Jul 11 13:46:04 CEST 2019
+_RP_Agente=R.P. Agente
+_Delimitacion_calzada=Delimitaci\u00F3n calzada
+_FC_Cansancio_o_sueno=F.C. Cansancio o sue\u00F1o
+_RP_Circunstancial=R.P. Circunstancial
+_Num_otros_vehiculos_implicados=Num. otros veh\u00EDculos implicados
+_Regulacion_prioridad=Regulaci\u00F3n prioridad
+_RP_ceda_el_paso_horizontal=R.P. ceda el paso horizontal
+_ES_Cebreado=E.S. Cebreado
+_CM_Arboles=C.M. Arboles
+_ET_tunel=E.T. tunel
+_DC_Bolardos_o_vayas_seguridad=D.C. Bolardos o vayas seguridad
+_Leves=Leves
+_Carretera=Carretera
+_RP_Stop_vertical=R.P. Stop vertical
+_Provincia=Provincia
+_Num_furgonetas=Num. furgonetas
+_FC_Drogas=F.C. Drogas
+_Influye_circustancias_especiales_via=Influye circustancias especiales v\u00EDa
+_Num_furgonetas_implicadas=Num. furgonetas implicadas
+_BS_en_mediana_asc=B.S. en mediana asc.
+_CE_Tapa_registro_defectuosa=C.E. Tapa registro defectuosa
+_Anchua_acera=Anchua acera
+_Influye_del_calzada=Influye del. calzada
+_RP_Senalizacion_circunstancial=R.P. Se\u00F1alizaci\u00F3n circunstancial
+_Tot_conductores=Tot. conductores
+_Num_camiones_implicados=Num. camiones implicados
+_FC_Irrupcion_peaton=F.C. Irrupci\u00F3n peat\u00F3n
+_BS_en_mediana_ascendente=B.S. en mediana ascendente
+_Numero_de_calle=N\u00FAmero de calle
+_FC_Enfermedad=F.C. Enfermedad
+_Carretera_original=Carretera (original)
+_BS_en_mediana_descendente=B.S. en mediana descendente
+_CM_Otros_elem_naturales=CM Otros elem. naturales
+_FC_Meteorologia_adversa=F.C. Meteorolog\u00EDa adversa
+_Velocidad_generica=Velocidad gen\u00E9rica
+_Trazado_planta=Trazado planta
+_FC_Cansancio=F.C. Cansancio
+_RP_stop_horizontal=R.P. stop horizontal
+_RP_Senal_de_stop_vertical=R.P. Se\u00F1al de stop vertical
+_CM_Despejado=C.M. Despejado
+_ES_Ninguno=E.S. Ninguno
+_FC_Estado_de_la_via=F.C. Estado de la v\u00EDa
+_FC_Cond_distraida=F.C. Cond. distraida
+_RP_Paso_peatones_no_elevado=R.P. Paso peatones no elevado
+_CE_Zanja=C.E. Zanja
+_Total_muertos=Total muertos
+_Hora_accidente=Hora accidente
+_CE_Balizas_moviles=C.E. Balizas m\u00F3viles
+_RP_Otra_senal=R.P. Otra senal
+_Influye_la_regulacion_de_prioridad=Influye la regulaci\u00F3n de prioridad
+_Total_Leves=Total Leves
+_Total_pasajeros_implicados=Total pasajeros implicados
+_Circular_sentido_contrario=Circular sentido contrario
+_FC_Averia=F.C. Aver\u00EDa
+_DC_Zona_peatonal_o_ajardinada=D.C. Zona peatonal o ajardinada
+_Num_motocicletas_implicadas=Num. motocicletas implicadas
+_FC_Cond_temeraria=F.C. Cond. temeraria
+_Num_autobuses=Num. autobuses
+_Vehiculos=Veh\u00EDculos
+_Influye_circus_esp_via=Influye circus. esp. v\u00EDa
+_RP_Norma_generica=R.P. Norma generica
+_RP_Semaforo=R.P. Semaforo
+_FC_Otro_factor=F.C. Otro factor
+_FC_Velocidad_inadecuada=F.C. Velocidad inadecuada
+_CE_Deteriorado=C.E. Deteriorado
+_BS_Lateral_asc_proteccion_mototista=B.S. Lateral asc. protecci\u00F3n mototista
+_ET_resaltos=E.T. resaltos
+_RP_Marcas=R.P. Marcas
+_CE_Obras=C.E. Obras
+_BS_en_mediana_desc=B.S. en mediana desc.
+_FC_Inexperiencia=F.C. Inexperiencia
+_ES_Barrera_de_seguridad=E.S. Barrera de seguridad
+_FC_Mal_estado_del_vehiculo=F.C. Mal estado del veh\u00EDculo
+_ET_puente_o_paso_superior=E.T. puente o paso superior
+_Sentidos_via=Sentidos v\u00EDa
+_Titularidad_de_la_via=Titularidad de la v\u00EDa
+_ES_Linea_long=E.S. Linea long
+_Tipo_de_via_original=Tipo de v\u00EDa (original)
+_FC_Estado_via=F.C. Estado v\u00EDa
+_Tipo_de_via=Tipo de v\u00EDa
+_Condicion_del_firme=Condici\u00F3n del firme
+_Numero_de_calzadas=N\u00FAmero de calzadas
+_Nivel_circulacion=Nivel circulaci\u00F3n
+_Tipo_accidente_Colision=Tipo accidente (Colisi\u00F3n)
+_RP_Paso_pea_no_elev=R.P. Paso pea. no elev.
+_Marcas_viales=Marcas viales
+_Meteorologia=Meteorolog\u00EDa
+_Punto_kilometrico=Punto kilometrico
+_ET_apartedero=E.T. apartedero
+_ET_puente=E.T. puente
+_Arcen=Arcen
+_Total_vehiculos_implicados=Total veh\u00EDculos implicados
+_RP_Senal_ceda_el_paso_vertical=R.P. Se\u00F1al ceda el paso vertical
+_RP_Solo_marcas_viales=R.P. Solo marcas viales
+_Muertos=Muertos
+_CM_Edificions=C.M. Edificions
+_Victimas=V\u00EDctimas
+_Total_peatones_implicados=Total peatones implicados
+_Caracteristicas_funcionales_de_la_via=Caracteristicas funcionales de la v\u00EDa
+_BS_Lateral_ascendente=B.S. Lateral ascendente
+_EB_Hitos_arista=E.B. Hitos arista
+_Nudo=Nudo
+_RP_Senal_ceda_el_paso_horizontal=R.P. Se\u00F1al ceda el paso horizontal
+_Total_victimas=Total victimas
+_Velocidad=Velocidad
+_EB_Panels_direccionales=E.B. Panels direccionales
+_FC_Alcohol=F.C. Alcohol
+_FC_Obstaculo_en_calzada=F.C. Obst\u00E1culo en calzada
+_ES_Solo_linea_longitudinal=E.S. Solo linea longitudinal
+_Tot_vehiculos=Tot. veh\u00EDculos
+_BS_Lateral_desc_prot_moto=B.S. Lateral desc. prot. moto.
+_RP_Generica=R.P. Generica
+_DC_Zona_peatonal=D.C. Zona peatonal
+_Num_calzadas=Num. calzadas
+_ES_Otras=E.S. Otras
+_CE_Obstaculo_en_calzada=C.E. Obst\u00E1culo en calzada
+_FC_Senalizacion=F.C. Se\u00F1alizaci\u00F3n
+_Influye_margen=Influye margen
+_Num_otros_vehiculos=Num. otros veh\u00EDculos
+_Influye\ visibilidad=Influye visibilidad
+_Carr_aptos_cir_desc=Carr. aptos cir. desc.
+_FC_Irrupcion_animal_en_calzada=F.C. Irrupci\u00F3n animal en calzada
+_FC_Giro=F.C. Giro
+_FC_Seguridad=F.C. Seguridad
+_Tot_pasajeros=Tot. pasajeros
+_CM_Carteles_publicidad=C.M. Carteles publicidad
+_CE_Ninguna=C.E. Ninguna
+_FC_Estado_de_la_senalizacion=F.C. Estado de la senalizaci\u00F3n
+_Num_motocicletas=Num. motocicletas
+_DC_Marcas_viales=D.C. Marcas viales
+_Informacion_nudo=Informaci\u00F3n nudo
+_Influye_nivel_circulacion=Influye nivel circulaci\u00F3n
+_BS_en_mediana_asc_prot_moto=B.S. en mediana asc. prot. moto.
+_Codigo_accidente=C\u00F3digo accidente
+_FC_Vel_inadecuada=F.C. Vel. inadecuada
+_Total_ilesos=Total ilesos
+_BS_en_mediana_asc_proteccion_motorista=B.S. en mediana asc. protecci\u00F3n motorista
+_Acera=Acera
+_DC_Sin_delimitar=D.C. Sin delimitar
+_DC_Setos=D.C. Setos
+_RP_Senal_de_stop_horizontal=R.P. Se\u00F1al de stop horizontal
+_Num_turismos_implicados=Num. turismos implicados
+_FC_Conduccion_negligente=F.C. Conducci\u00F3n negligente
+_FC_Averia_mecanica=F.C. Aver\u00EDa mecanica
+_EB_Paneles=E.B. Paneles
+_CE_Tapa_defectuosa=C.E. Tapa defectuosa
+_FC_Conduccion_distraida=F.C. Conducci\u00F3n distraida
+_RP_Otra=R.P. Otra
+_FC_Cond_negligente=F.C. Cond. negligente
+_Poblacion=Poblaci\u00F3n
+_Num_ciclomotores_implicados=Num. ciclomotores implicados
+_Municipio=Municipio
+_ES_Mediana=E.S. Mediana
+_Carriles_aptos_circular_descenente=Carriles aptos circulaci\u00F3n descenente
+_BS_Lateral_desc=B.S. Lateral desc.
+_FC_Giro_incorrecto=F.C. Giro incorrecto
+_Anchura_de_carril=Anchura de carril
+_BS_Lateral_descendente=B.S. Lateral descendente
+_Num_ciclomotores=Num. ciclomotores
+_DC_Bolardos=D.C. Bolardos
+_FC_Otro=F.C. Otro
+_ET_apartadero=E.T. apartadero
+_BS_en_mediana_desc_proteccion_motorista=B.S. en mediana desc. protecci\u00F3n motorista
+_Graves=Graves
+_ES_Barrera_seguridad=E.S. Barrera seguridad
+_FC_Prioridad=F.C. Prioridad
+_BS_Lateral_asc=B.S. Lateral asc.
+_EB_Captafaros=E.B. Captafaros
+_CE_Otras=C.E. Otras
+_CM_Postes=C.M. Postes
+_Titularidad_via_orig=Titularidad v\u00EDa orig.
+_Calle=Calle
+_FC_Tramo_en_obras=F.C. Tramo en obras
+_CM_Edificios=C.M. Edificios
+_Croquis=Croquis
+_FC_Meteorologia=F.C. Meteorolog\u00EDa
+_Influye_caracteristicas_margen=Influye caracteristicas margen
+_Trazado_alzado=Trazado alzado
+_ET_baden=E.T. baden
+_Influye_firme=Influye firme
+_Sentido=Sentido
+_FC_No_respetar_prioridad=F.C. No respetar prioridad
+_CM_Otros_elem_artificiales=C.M. Otros elem. artificiales
+_FC_Obras=F.C. Obras
+_Carriles_aptos_circular_ascendente=Carriles aptos circulaci\u00F3n ascendente
+_ET_Estrechamiento=E.T. Estrechamiento
+_Num_turismos=Num. turismos
+_Cruce_INE=Cruce INE
+_Influye_iluminacion=Influye iluminaci\u00F3n
+_Circunstancias_especiales_via=Circunstancias especiales v\u00EDa
+_ES_Zona_peatonal=E.S. Zona peatonal
 _Peatones=Peatones
 _Codigo_informe=C\u00F3digo informe
-_Delimitacion_calzada=Delimitacion calzada
+_Influye_la_acera=Influye la acera
+_RP_Paso_ciclistas=R.P. Paso ciclistas
+_BS_en_mediana_desc_prot_moto=B.S. en mediana desc. prot. moto.
+_Total_graves=Total graves
 _Factores_concurrentes=Factores concurrentes
-_Codigo_accidente=C\u00F3digo accidente
-_Num_otros_vehiculos_implicados=Num. otros vehiculos implicados
-_Regulacion_prioridad=Regulaci\u00F3n prioridad
+_CE_Firme_deteriorado=C.E. Firme deteriorado
+_Iluminacion=Iluminaci\u00F3n
+_CE_Firme_con_baches=C.E. Firme con baches
 _Total_conductores_implicados=Total conductores implicados
-_Codigo_calle=Codigo calle
-_Num_turismos_implicados=Num. turismos implicados
+_ET_Baden=E.T. Baden
+_Codigo_calle=C\u00F3digo calle
+_CE_Se_desconoce=C.E. Se desconoce
+_CM_Otros_elementos_naturales=C.M. Otros elementos naturales
 _Tipo_accidente_Salida=Tipo accidente (Salida)
-_Carretera=Carretera
-_Provincia=Provincia
-_Titularidad_de_la_via=Titularidad de la via
-_Tipo_de_via_original=Tipo de via original
+_CM_Otros_elementos_artificiales=C.M. Otros elementos artificiales
+_FC_Obstaculo=F.C. Obst\u00E1culo
 _Caracteristicas_margen=Caracteristicas margen
-_Num_furgonetas_implicadas=Num. furgonetas implicadas
-_Tipo_de_via=Tipo de via
-_Poblacion=Pobaci\u00F3n
+_CE_Conos_u_otras_balizas_moviles=C.E. Conos u otras balizas m\u00F3viles
+_DC_Bordillo=D.C. Bordillo
+_DC_Isleta_o_refugio=D.C. Isleta o refugio
+_DC_Marcas=D.C. Marcas
+_Influye_meteorologia=Influye meteorolog\u00EDa
+_FC_Irrupcion_animal=F.C. Irrupci\u00F3n animal
+_Influye_RP=Influye R.P.
 _Cruce=Cruce
-_Tipo_accidente_Colision=Tipo accidente (Colision)
-_Nivel_circulacion=Nivel circulaci\u00F3n
-_Calle_numero=Calle n\u00FAmero
-_Num_ciclomotores_implicados=Num. ciclomores implicados
-_Num_camiones_implicados=Num. camiones implicados
-_Municipio=Municipio
+_BS_Lateral_asc_prot_moto=B.S. Lateral asc. prot. moto
 _Barrera_seguridad=Barrera seguridad
-_Punto_kilometrico=Punto kilometrico
-_Circunstancias_especiales=Circunstancias especiales
-_Total_vehiculos_implicados=Total vehiculos implicados
-_Elementos_tramo=Elementos tramo
-_Carretera_original=Carretera original
+_ET_resaltos_reductores_velocidad=E.T. resaltos reductores velocidad
+_BS_Lateral_desc_proteccion_mototista=B.S. Lateral desc. protecci\u00F3n mototista
+_RP_Paso_peatones_elevado=R.P. Paso peatones elevado
+_CE_Obstaculo=C.E. Obst\u00E1culo
+_DC_Otras=D.C. Otras
+_Elementos_tramo=Elementos del tramo
+_CE_Baches=C.E. Baches
+_CM_Carteles=C.M. Carteles
 _Zona=Zona
-_Total_peatones_implicados=Total peatones implicados
-_Nudo=Nudo
-_Calle=Calle
+_CE_Zanja_o_surco=C.E. Zanja o surco
+_FC_No_mantener_intervalo_seguridad=F.C. No mantener intervalo seguridad
+_FC_Conduccion_temeraria=F.C. Conducci\u00F3n temeraria
+_Influye_delimitacion_calzada=Influye delimitaci\u00F3n calzada
+_FC_Irrupcion_peaton_en_calzada=F.C. Irrupci\u00F3n peat\u00F3n en calzada
+_Visibilidad=Visibilidad
+_FC_Estado_vehiculo=F.C. Estado veh\u00EDculo
+_Sentidos=Sentidos
+_DC_Isleta=D.C. Isleta
+_ET_ninguno=E.T. ninguno
+_Ilesos=Ilesos
 _Fecha_accidente=Fecha accidente
-_Nudo_informacion=Nudo, informaci\u00F3n
-_Croquis=Croquis
-_Hora_accidente=Hora accidente
-_Total_pasajeros_implicados=Total pasajeros implicados
-_Sentido=Sentido
-_Circular_sentido_contrario=Circular sentido contrario
+_Anchura_carril=Anchura carril
+_RP_ceda_el_paso_vertical=R.P. ceda el paso vertical
+_ET_paso_inferior=E.T. paso inferior
+_Num_camiones=Num. camiones
+_CE_Escalon=C.E. Escalon
+_CM_Otros_obstaculos=C.M. Otros obst\u00E1culos
+_Num_bicicletas=Num. bicicletas
+_FC_Adelantamiento_antireglamentario=F.C. Adelantamiento antireglamentario
+_Carr_aptos_cir_asc=Carr. aptos cir. asc.
+_Tot_peatones=Tot. peatones
+_FC_Adelantamiento=F.C. Adelantamiento
 _Num_autobuses_implicados=Num. autobuses implicados
-_Titularidad_de_la_via_original=Titularidad de la via original
+_Titularidad_de_la_via_original=Titularidad de la v\u00EDa (original)
 _Num_bicicletas_implicadas=Num. bicicletas implicadas
-_Num_motocicletas_implicadas=Num. moticicletas implicadas
-_Vehiculos=Veh\u00EDculos
-_Cruce_INE=Cruce INE
+_CE_Desprendimientos=C.E. Desprendimientos
+_RP_Paso_pea_elev=R.P. Paso pea. elev.
+_CM_Se_desconoce=C.M. Se desconoce
