--- a/i18n/text.properties
+++ b/i18n/text.properties
@@ -1,5 +1,5 @@
 #
-#Wed Apr 08 13:57:58 CEST 2020
+#Wed Apr 08 21:02:01 CEST 2020
 _Conf_benzo=Conf. benzo.
 _AB_desconocido=Ab. desconocido
 _CM_Otros_elementos_artificiales=C.M. Otros elementos artificiales
@@ -153,8 +153,8 @@ _RP_stop_horizontal=R.P. stop horizontal
 _Total_muertos=Total muertos
 _DC_Bolardos_o_vayas_seguridad=D.C. Bolardos o vayas seguridad
 _CM_Postes=C.M. Postes
-_Acumular_filtro.=Acumular filtro.
 _Num_otros_vehiculos=Num. otros veh\u00EDculos
+_Acumular_filtro.=Acumular filtro.
 _Velocidad=Velocidad
 _AB_Lat_tras_der=Ab. Lat. tras. der.
 _RP_Paso_pea_no_elev=R.P. Paso pea. no elev.
@@ -223,9 +223,10 @@ _Ninyo_brazo=Ni\u00F1o brazo
 _Prueba_drogas=Prueba drogas
 _Fecha_inicio=Fecha de inicio
 _Anchura_de_carril=Anchura de carril
-_Eliminar_el_filtro_acumulado=Eliminar el filtro acumulado.
 _Id_conduct=Id. conduct.
+_Eliminar_el_filtro_acumulado=Eliminar el filtro acumulado.
 _Group_by=Agrupar por
+_Con_danos=Con da\u00F1os
 _ET_puente=E.T. puente
 _DC_Otras=D.C. Otras
 _Manos=Manos
@@ -410,6 +411,7 @@ _Imagen=Imagen
 _Fecha_fin=Fecha de fin
 _Titularidad=Titularidad
 _FC_Conduccion_negligente=F.C. Conducci\u00F3n negligente
+_Acumular_filtro=Acumular filtro.
 _FC_Irrupcion_peaton_en_calzada=F.C. Irrupci\u00F3n peat\u00F3n en calzada
 _Confirmado_metanfetaminas=Confirmado metanfetaminas
 _DC_Marcas_viales=D.C. Marcas viales
@@ -432,8 +434,8 @@ _Influyen_presunta_infraccion=Influyen presunta infracci\u00F3n
 _Condicion_del_firme=Condici\u00F3n del firme
 _Infl_fact_atencion=Infl. fact. atenci\u00F3n
 _CM_Se_desconoce=C.M. Se desconoce
-_Categoria=Categoria
 _Positivo_cannabis_y_derivados=Positivo cannabis y derivados
+_Categoria=Categoria
 _Tipo_de_accidente=Tipo de accidente
 _Influye_firme=Influye firme
 _Influye_delimitacion_calzada=Influye delimitaci\u00F3n calzada
@@ -444,6 +446,7 @@ _AB_Cort_del_izq=Ab. Cort. del. izq.
 _Clase_perm=Clase perm.
 _FC_Drogas=F.C. Drogas
 _AB_Cort_tras_izq=Ab. Cort. tras. izq.
+_Con_victimas=Con v\u00EDctimas
 _RP_Senal_ceda_el_paso_horizontal=R.P. Se\u00F1al ceda el paso horizontal
 _CM_Carteles=C.M. Carteles
 _RP_Paso_peatones_elevado=R.P. Paso peatones elevado
