--- a/i18n/text.properties
+++ b/i18n/text.properties
@@ -133,7 +133,7 @@ _Cod_informe=C\u00F3d. informe
 _Confirmado_otra_sustancias=Confirmado otra sustancias
 _Cannabis=Cannabis
 _Motivo_despl=Motivo despl.
-_Sin_conducor=Sin conducor
+_Sin_conductor=Sin conductor
 _Nivel_circulacion=Nivel circulaci\u00F3n
 _BS_Lateral_desc_proteccion_mototista=B.S. Lateral desc. protecci\u00F3n mototista
 _Codigo_croquis=C\u00F3digo croquis
