añadidos nombres de campos

--- a/i18n/text.properties
+++ b/i18n/text.properties
@@ -502,3 +502,22 @@ _FC_No_respetar_prioridad=F.C. No respetar prioridad
 _AB_Cort_del_der=Ab. Cort. del. der.
 _AB_Cort_tras_der=Ab. Cort. tras. der.
 _Accion_del_peaton=Acci\u00F3n del peat\u00F3n
+_INE_Provincia=INE Provincia
+_INE_Municipio=INE Municipio
+_Id_accidente=Id. Accidente
+_Codigo_aforo=C\u00F3digo aforo
+_Codigo_Estacion_Aforo=C\u00F3digo estaci\u00F3n aforo
+_Punto_kilometrico_DGT=Punto kilom\u00E9trico DGT
+_Influye_la_regulacion_de_prioridad=Influye la regulaci\u00F3n de prioridad
+_Codigo_tramo=C\u00F3digo tramo
+_Quincena=Quincena
+_Dato_actualizado=Dato actualizado
+_Extra=Extra
+_Cod_aforo=C\u00F3digo aforo
+_Cod_Estacion_Aforo=C\u00F3digo estaci\u00F3n aforo
+_Grupo_temporal=Grupo temporal
+_Punto_final=Punto final
+_Punto_Inicio=Punto inicio
+_Tipo_estacion=Tipo estaci\u00F3n
+_Tramo=Tramo
+_Anyo=A\u00F1o
