--- a/i18n/text.properties
+++ b/i18n/text.properties
@@ -361,6 +361,8 @@ _Influye_margen=Influye margen
 _Tipo_de_via=Tipo de v\u00EDa
 _Fecha_matriculacion=Fecha matriculaci\u00F3n
 _Pk_fin=P.K. Fin
+_Pk_Final=P.K. Fin
+_Pk_Est=P.K. Estaci\u00F3n
 _FC_Cond_temeraria=F.C. Cond. temeraria
 _FC_Irrupcion_animal_en_calzada=F.C. Irrupci\u00F3n animal en calzada
 _EB_Hitos_arista=E.B. Hitos arista
@@ -513,6 +515,7 @@ _Codigo_tramo=C\u00F3digo tramo
 _Quincena=Quincena
 _Dato_actualizado=Dato actualizado
 _Extra=Extra
+_Cod_Aforo=C\u00F3digo aforo
 _Cod_aforo=C\u00F3digo aforo
 _Cod_Estacion_Aforo=C\u00F3digo estaci\u00F3n aforo
 _Grupo_temporal=Grupo temporal
@@ -521,3 +524,14 @@ _Punto_Inicio=Punto inicio
 _Tipo_estacion=Tipo estaci\u00F3n
 _Tramo=Tramo
 _Anyo=A\u00F1o
+_Mes=Mes
+_Dia=Dia
+_Hora=Hora
+_Dia_semana=Dia semana
+_Total_vehiculos=Total vehiculos
+_Total_vehiculos_pesados=Total vehiculos pesados
+_Total_vehiculos_ligeros=Total vehiculos ligeros
+_Porcentaje_pesados=Porcentaje pesados
+_Intensidad_media_diaria=Intensidad media diaria
+_Intensidad_media_diaria_pesados=Intensidad media diaria pesados
+_Intensidad_media_diaria_ligeros=Intensidad media diaria ligeros
